--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "worker-loader": "^2.0.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.9.14",
+    "@material-ui/icons": "^4.9.1",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
+    "phaser": "^3.23.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.1",
     "react-use": "^10.5.0",
     "rxjs": "6.3.2",
-    "simplex-noise": "*"
+    "simplex-noise": "*",
+    "typeface-roboto": "0.0.75"
   }
 }
