--- a/package.json
+++ b/package.json
@@ -31,12 +31,16 @@
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
+    "honeycomb-grid": "^3.1.7",
+    "pixi-viewport": "^4.11.1",
+    "pixi.js": "^5.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.1",
     "react-use": "^10.5.0",
     "rxjs": "6.3.2",
     "simplex-noise": "*",
+    "stats.js": "^0.17.0",
     "typeface-roboto": "0.0.75"
   }
 }
