--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "honeycomb-grid": "^3.1.7",
     "pixi-cull": "^0.6.0",
     "pixi-viewport": "^4.11.1",
-    "pixi.js-legacy": "^5.2.4",
+    "pixi.js": "^5.2.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.1",
