--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "file-loader": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "raw-loader": "^4.0.1",
     "react-hot-loader": "^4.5.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
