--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
+    "alea": "^1.0.0",
     "honeycomb-grid": "^3.1.7",
     "ndarray": "^1.0.19",
     "pixi-cull": "^0.6.0",
