--- a/package.json
+++ b/package.json
@@ -29,12 +29,14 @@
   "dependencies": {
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.9.1",
+    "@types/lodash": "^4.14.152",
     "@types/ndarray": "^1.0.8",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
     "alea": "^1.0.0",
     "honeycomb-grid": "^3.1.7",
+    "lodash": "^4.17.15",
     "ndarray": "^1.0.19",
     "pixi-cull": "^0.6.0",
     "pixi-viewport": "^4.11.1",
@@ -46,6 +48,7 @@
     "rxjs": "6.3.2",
     "simplex-noise": "*",
     "stats.js": "^0.17.0",
-    "typeface-roboto": "0.0.75"
+    "typeface-roboto": "0.0.75",
+    "typescript-collections": "^1.3.3"
   }
 }
