--- a/package.json
+++ b/package.json
@@ -5,26 +5,31 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --max_old_space_size=4096 node_modules/.bin/webpack-dev-server --hot",
-    "build": "NODE_ENV=production webpack --production"
+    "build": "NODE_ENV=production webpack --production",
+    "script": "./node_modules/.bin/ts-node --script-mode"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@types/webpack-env": "^1.15.2",
+    "@types/xml2js": "^0.4.5",
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
     "html-webpack-plugin": "^3.2.0",
+    "jimp": "^0.12.1",
     "raw-loader": "^4.0.1",
     "react-hot-loader": "^4.5.3",
     "style-loader": "^0.23.1",
     "ts-loader": "^6.0.4",
+    "ts-node": "^8.10.1",
     "typescript": "^3.9.2",
     "url-loader": "^2.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.11.0",
-    "worker-loader": "^2.0.0"
+    "worker-loader": "^2.0.0",
+    "xml2js": "^0.4.23"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
