added forest and grassland ocean transition tilesets

--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "node --max_old_space_size=4096 node_modules/.bin/webpack-dev-server --hot",
-    "build": "NODE_ENV=production webpack --production",
-    "script": "./node_modules/.bin/ts-node --script-mode"
+    "build": "NODE_ENV=production webpack --production"
   },
   "author": "",
   "license": "ISC",
