--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/webpack-env": "^1.15.2",
     "@types/xml2js": "^0.4.5",
+    "@types/yargs": "^15.0.5",
     "css-loader": "^3.1.0",
     "file-loader": "^4.1.0",
     "fork-ts-checker-webpack-plugin": "^4.1.3",
@@ -28,7 +29,8 @@
     "webpack-cli": "^3.3.6",
     "webpack-dev-server": "^3.11.0",
     "worker-loader": "^2.0.0",
-    "xml2js": "^0.4.23"
+    "xml2js": "^0.4.23",
+    "yargs": "^15.3.1"
   },
   "dependencies": {
     "@material-ui/core": "^4.9.14",
