made typescript faster

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,9 @@
     "esModuleInterop": true,
     "experimentalDecorators": true,
     "downlevelIteration": true
-  }
+  },
+  "exclude": [
+    "node_modules",
+    "dist"
+  ]
 }
