--- a/package.json
+++ b/package.json
@@ -33,27 +33,32 @@
     "yargs": "^15.3.1"
   },
   "dependencies": {
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.9.1",
+    "@chakra-ui/core": "^0.8.0",
+    "@emotion/core": "^10.0.28",
+    "@emotion/styled": "^10.0.27",
     "@types/lodash": "^4.14.152",
     "@types/ndarray": "^1.0.8",
     "@types/react": "^16.8.24",
     "@types/react-dom": "^16.8.5",
     "@types/react-router-dom": "^5.1.0",
     "alea": "^1.0.0",
+    "emotion-theming": "^10.0.27",
     "honeycomb-grid": "^3.1.7",
     "lodash": "^4.17.15",
     "ndarray": "^1.0.19",
     "pixi-cull": "^0.6.0",
     "pixi-viewport": "^4.11.1",
     "pixi.js": "^5.2.4",
+    "polished": "^3.6.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-icons": "^3.10.0",
     "react-router-dom": "^5.1.1",
     "react-use": "^10.5.0",
     "rxjs": "6.3.2",
     "simplex-noise": "*",
     "stats.js": "^0.17.0",
+    "styled-components": "^5.1.1",
     "typeface-roboto": "0.0.75",
     "typescript-collections": "^1.3.3"
   }
