--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "lodash": "^4.17.15",
     "ndarray": "^1.0.19",
     "pixi-cull": "^0.6.0",
+    "pixi-tilemap": "^2.0.6",
     "pixi-viewport": "^4.11.1",
     "pixi.js": "^5.2.4",
     "polished": "^3.6.3",
