--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "rxjs": "6.3.2",
     "simplex-noise": "*",
     "stats.js": "^0.17.0",
+    "structurae": "^3.1.0",
     "styled-components": "^5.1.1",
     "typeface-roboto": "0.0.75",
     "typescript-collections": "^1.3.3"
