added SectionalTileset, which renders sectional tiles instead of full hex tiles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     "experimentalDecorators": true,
     "downlevelIteration": true
   },
+  "include": ["src", "scripts"],
   "exclude": [
     "node_modules",
     "dist"
