added more tileset groups, new ones need to be aware of terrain transitions

--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -10,5 +10,8 @@
     "experimentalDecorators": true,
     "downlevelIteration": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "exclude": [
+    "node_modules"
+  ]
 }
