--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "commonjs",
     "moduleResolution": "node",
     "target": "es5",
-    "outDir": "out",
+    "outDir": "dist",
     "sourceMap": true,
     "esModuleInterop": true,
     "experimentalDecorators": true,
@@ -12,6 +12,6 @@
     "allowSyntheticDefaultImports": true
   },
   "exclude": [
-    "node_modules"
+    "../node_modules"
   ]
 }
