--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "raw-loader": "^4.0.1",
     "react-hot-loader": "^4.5.3",
     "style-loader": "^0.23.1",
+    "threads-plugin": "^1.3.1",
     "ts-loader": "^6.0.4",
     "ts-node": "^8.10.1",
     "typescript": "^3.9.2",
@@ -61,7 +62,9 @@
     "stats.js": "^0.17.0",
     "structurae": "^3.1.0",
     "styled-components": "^5.1.1",
+    "threads": "^1.6.1",
     "typeface-roboto": "0.0.75",
-    "typescript-collections": "^1.3.3"
+    "typescript-collections": "^1.3.3",
+    "zen-observable": "^0.8.15"
   }
 }
